--- a/telegraf.conf
+++ b/telegraf.conf
@@ -58,7 +58,7 @@
   ## Valid values are "Nns", "Nus" (or "Nµs"), "Nms", "Ns".
   precision = ""
   ## Run telegraf in debug mode
-  debug = true
+  debug = false
   ## Run telegraf in quiet mode
   quiet = false
   ## Override default hostname, if empty use os.Hostname()
@@ -77,7 +77,7 @@
   ## Multiple urls can be specified as part of the same cluster,
   ## this means that only ONE of the urls will be written to each interval.
   # urls = ["udp://localhost:8089"] # UDP endpoint example
-  urls = ["http://tygra.tribe.home:8086"] # required
+  urls = ["http://10.13.14.200:8086"] # required
   ## The target database for metrics (telegraf will create it if not exists).
   database = "telegraf" # required
 
@@ -121,7 +121,7 @@
 [[inputs.disk]]
   ## By default, telegraf gather stats for all mountpoints.
   ## Setting mountpoints will restrict the stats to the specified mountpoints.
-  mount_points = ["/", "/mnt/user]
+  #mount_points = []
 
   ## Ignore some mountpoints by filesystem type. For example (dev)tmpfs (usually
   ## present on /run, /var/run, /dev/shm or /dev).
